adding rate limit,  guest dahsboard, and history student
